changes in nav bar

--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@
   color: #ffffff;
   text-decoration: none;
 }
+.nav1:hover{
+  font-size: 27px;
+  color: rgb(233, 247, 162);
+}
 
 .nav2 {
   font-size: 25px;
@@ -46,6 +50,10 @@
   color: #ffffff; 
   text-decoration: none; 
 }
+.nav2:hover{
+  font-size: 27px;
+  color: rgb(233, 247, 162);
+}
 .nav3{
   font-size: 25px;
   font-weight: bolder;
@@ -53,6 +61,10 @@
   margin-top: 10px;
   color: #ffffff;
   text-decoration: none;
+}
+.nav3:hover{
+  font-size: 27px;
+  color: rgb(233, 247, 162);
 }
 .nav4{
   font-size: 25px;
@@ -62,6 +74,10 @@
   color: #ffffff;
   text-decoration: none;
 }
+.nav4:hover{
+  font-size: 27px;
+  color: rgb(233, 247, 162);
+}
 .nav5{
   font-size: 25px;
   font-weight: bolder;
@@ -70,7 +86,10 @@
   color: #ffffff;
   text-decoration: none;
 }
-
+.nav5:hover{
+  font-size: 27px;
+  color: rgb(233, 247, 162);
+}
 
 
 .intro{
